--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="primary_text">@color/tundora</color>
     <color name="text_highlight">@color/yellow_sea</color>
 
-    `<color name="recognition_good">@color/mountain_meadow</color>
-    `<color name="recognition_satisfactory">@color/key_lime_pie</color>
-    `<color name="recognition_borderline">@color/hot_cinnamon</color>
+    <color name="recognition_good">@color/mountain_meadow</color>
+    <color name="recognition_satisfactory">@color/key_lime_pie</color>
+    <color name="recognition_borderline">@color/hot_cinnamon</color>
 
 </resources>
